--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,10 +157,15 @@ h6 {
     overflow: hidden;
     text-overflow: ellipsis;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .suggests__item:hover {
     background-color: rgb(237, 235, 235);
+}
+
+.suggests__item_visited {
+    color: #c50cd6;
 }
 
 .history {
